Fix Padding for News Pullout on Firefox

--- a/app/pages/home-for-user/news-pullout.styl
+++ b/app/pages/home-for-user/news-pullout.styl
@@ -3,7 +3,7 @@
   .news-main
     height: 100%
     overflow: hidden
-    padding: 1em 2em
+    padding: 0em 2em
     width: 100%
 
     &.active
@@ -20,7 +20,7 @@
   .news-container
     height: 100%
     overflow-y: scroll
-    padding: 1em
+    padding: 1em 1em 0 1em
     width: 100%
 
   .news-section
